...
            android:text="@string/upcoming"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@id/view_upcoming"
            app:layout_constraintTop_toTopOf="@id/view_upcoming" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/view_upcoming"
            app:layout_constraintTop_toBottomOf="@id/title_upcoming" />
...
            android:text="@string/news"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@id/view_new"
            app:layout_constraintTop_toTopOf="@id/view_new" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/view_new"
...
